--- a/style.css
+++ b/style.css
@@ -225,6 +225,21 @@ font-family: 'Work Sans', sans-serif;
   }
 }
 
+.team-avatar {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 3px solid #209cee; /* Matches Bulma's info color */
+  margin: 10px;
+}
+
+.team-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 
 
 
